ocp/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iast-aws-node-$ROSA_LANE
  labels:
    app: iast-aws-node
    cost-center: '1001714'
    com.statefarm.contact: WG0864
    com.statefarm.project: '234970'
    app.kubernetes.io/name: iast-aws-node-$ROSA_LANE
    app.kubernetes.io/part-of: iast-aws-node
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: iast-aws-node-$ROSA_LANE
      app.kubernetes.io/part-of: iast-aws-node
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: iast-aws-node
        cost-center: '1001714'
        com.statefarm.contact: WG0864
        com.statefarm.project: '234970'
        app.kubernetes.io/name: iast-aws-node-$ROSA_LANE
        app.kubernetes.io/part-of: iast-aws-node
    spec:
      automountServiceAccountToken: true
      serviceAccountName: iast-aws-node-$ROSA_LANE
      imagePullSecrets:
        - name: pull-secret-jfrog
      containers:
        - name: iast-aws-node
          image: packages.ic1.statefarm/rosa-qa-repo/pcrosa01/iast-aws/iast-aws-node:$ROSA_DOCKER_IMAGE_TAG
          imagePullPolicy: Always
          resources:
            requests:
              memory: '2048Mi'
              cpu: '500m'
            limits:
              memory: '2048Mi'
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 5
      terminationGracePeriodSeconds: 3600
